# suture

./: .gitignore  .gitmodules  Cargo.toml  README.md  Spork Text.ipynb  Spork.ipynb  build.rs  pyproject.toml  pytest.ini
.github/workflows/: CI.yml
demo/: CURSOR_PROTOCOL.md  README.md  bot.py  index.html  package-lock.json  package.json  uv.toml  vite.config.ts
demo/src/: cursorPlugin.ts  cursorProtocol.ts  main.ts
mcp-server/: .gitignore  pyproject.toml  server.py
src/: lib.rs
tests/: test_broadcast.py  test_ephemera.py  test_lib.py
