[package]
name = "suture"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "suture"
crate-type = ["cdylib"]

[dependencies]
automerge = "0.7.0"
pyo3 = "0.27.0"
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
samod = "0.5.0"
samod-core = "0.5.0"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.27.0"
