[package]
name = "spork"
version = "2.0.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spork"
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1.41"
automerge = "0.7.0"
futures = "0.3"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38", "anyhow"] }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
samod = { version = "0.5.0", features = ["tokio", "tungstenite"] }
samod-core = "0.5.0"
tokio = { version = "1.46.0", features = ["rt", "fs", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tungstenite = { version = "0.27.0"}
