[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automerge-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Automerge CRDT text editing"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "spork @ file:///Users/kylekelley/conductor/suture/.conductor/krakow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
automerge-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
